--- a/classroom.html
+++ b/classroom.html
@@ -81,7 +81,7 @@
 				<h1 class="info_title" style="text-align: center;" >BOAS VINDAS</h1>
 				<p style="text-align: justify;"> &nbsp &nbspBem vindo ao nosso curso!
 					<br>
-					&nbsp &nbsp  Neste curso online de capacitação, com carga horária de <b>24 hrs</b>, você irá conhecer mais sobre a Implantação do Sistema Agrossilvipastoril, também chamado de Sistema de Integração Lavoura-Pecuária-Floresta (ILPF). Você terá acesso a apostilas, vídeos e exercícios e ao final do curso, receberá um certificado de participação. 
+					&nbsp &nbsp  Neste curso online de capacitação, com carga horária de <b>24 hrs</b>, você irá conhecer mais sobre a atuação do sistema Agrossilvipastoril no desenvolvimento do Agro e sua Implantação no bioma Cerrado. Você terá acesso a apostilas, vídeos e exercícios e ao final do curso, receberá um certificado de participação. 
 					<br> &nbsp  O período para conclusão deste curso vai do dia <b>16/11/2022 até 16/12/2022</b>.
 		<br> &nbsp Na data de 17/12/2022 haverá um <b> dia de de campo </b> no centro de estudos de sistemas Agrossilvipastoris do IFTM Campus Uberlândia e também na Fazenda Água Limpa da UFU, com professores da área, onde as peculiaridades do sistema serão demonstradas na prática e poderão ser sanadas as eventuais dúvidas. 
 		<br> &nbsp A conclusão somente será totalmente validada após o envio do <b>formulário de avaliação</b> contido no último módulo, e o certificado de participação será disponibilizado pela coordenação de extensão do IFTM Campus Uberlândia algumas semanas após a conclusão.
