--- a/content/module2.html
+++ b/content/module2.html
@@ -131,7 +131,7 @@
 
         </section>
 
-        <a target="_blank" href="../books/module_2.pdf"class="download_button">Baixar apostila</a>
+        <a target="_blank" href="../complements/books/module_2.pdf"class="download_button">Baixar apostila</a>
 
         <section class="video_wrapper">
             <p class="video_description">Acompanhe o vídeo introdutório:</p>
