--- a/content/module3.html
+++ b/content/module3.html
@@ -96,9 +96,6 @@
 	</div>
 
 		<div class="container_module_btns" id="container_module_btns">
-			<div class="line">
-				<span class="line_btn"></span>
-			</div>
 
 			<div class="buttons">
 				<button class="module_btn active_mod mod1_btn" data-module="container_mod1" onclick="openModule(this)" id="1" name="1">Módulo 1</button>
@@ -107,6 +104,10 @@
 				<button class="module_btn mod4_btn" data-module="container_mod4" onclick="openModule(this)" id="4" name="4">Módulo 4</button>
 				<button class="module_btn mod5_btn" data-module="container_mod5" onclick="openModule(this)" id="5" name="5">Módulo 5</button>
 				<button class="module_btn mod6_btn" data-module="container_mod6" onclick="openModule(this)" id="6" name="6">Módulo 6</button>
+				<div class="line">
+					<span class="line_btn"></span>
+				</div>
+			
 			</div>
 		</div>
 
@@ -128,7 +129,7 @@
 
 			</section>
 
-			<a target="_blank" href="../books/module_3.pdf" class="download_button">Baixar apostila</a>
+			<a target="_blank" href="../complements/books/module_3.pdf" class="download_button">Baixar apostila</a>
 		</section>
 
 		<section class="video_wrapper">
@@ -206,15 +207,15 @@
 				<h1 class="text_title"><b class="subtopic_number">2.1</b>Milho ( <i>Zea mays</i>)</h1>
 
 				<div class="box_info">
-					<p> &nbsp &nbsp A produção de milho destaca-se no contexto da integração lavoura pecuária, devido a inúmeras aplicações que esse grande produtor de grãos possui, na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem<a href="#ref_M3">[2]</a>. </p>
+					<p> &nbsp &nbsp A produção de milho destaca-se no contexto da integração lavoura pecuária, devido às inúmeras aplicações que esse grande produtor de grãos possui, na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem<a href="#ref_M3">[2]</a>. </p>
 
 					<img title="embrapa.com.br" class="box_img_right" src="../complements/images/module3/img_11.jpg">
 
 				</div> <br> <br>
 
-				<p>&nbsp &nbsp Uma das vantagens do milho em comparação com outras culturas, principalmente cereais, consiste na sua qualidade na consorciação com capim. Vantagem observada pela competividade do consorcio visto que o porte dessa planta, exerce depois de estabelecidas, grande supressão em relação a demais espécies que crescem no local. A disponibilidade de herbicidas graminicidas seletivos ao milho, possibilita obter resultados excelentes com a consorciação milho com planta forrageira <a href="#ref_M3">[2]</a>. <br>
-				&nbsp &nbsp Vale destacar da cultura é que ela apresenta elevado potencial produtivo, com bom valor de mercado na maioria dos anos agrícolas, com produtividade de grãos variando de <b>2.000 a mais de m10.000 kg/ha</b>, tem uma excelente resposta a adubação, especialmente a nitrogenada, tem capacidade de produz elevada quantidade de resíduos culturais, existe uma gama enorme de matérias (híbridos simples, duplos, triplos e variedades) no mercado que podem ser selecionados para melhor adequar ao clima e solo da área de implantação <a href="#ref_M3">[1]</a>. <br>
-				&nbsp &nbsp O controle de plantas daninhas, doenças e pragas é idêntico ao realizado no cultivo tradicional, tendo atenção as pragas e <button class="word_link">patógenos polífagos<span class="word_description">Patógenos que atacam um grande número de espécies vegetais.</span> </button>, que são um dos grandes problemas de sistemas integrados <a href="#ref_M3">[1]</a>. <br> 
+				<p>&nbsp &nbsp Uma das vantagens do milho em comparação com outras culturas, principalmente cereais, consiste na sua qualidade na consorciação com capim. Vantagem observada pela competitividade do consórcio visto que o porte dessa planta, exerce depois de estabelecidas, grande supressão em relação às demais espécies que crescem no local. A disponibilidade de herbicidas graminicidas seletivos ao milho, possibilita obter resultados excelentes com a consorciação de milho com planta forrageira <a href="#ref_M3">[2]</a>. <br>
+				&nbsp &nbsp Vale destacar da cultura é que ela apresenta elevado potencial produtivo, com bom valor de mercado na maioria dos anos agrícolas, com produtividade de grãos variando de <b>2.000 a mais de m10.000 kg/ha</b>, tem uma excelente resposta a adubação, especialmente a nitrogenada, tem capacidade de produz elevada quantidade de resíduos culturais, existe uma gama enorme de materias (híbridos simples, duplos, triplos e variedades) no mercado que podem ser selecionados para melhor adequar ao clima e solo da área de implantação <a href="#ref_M3">[1]</a>. <br>
+				&nbsp &nbsp O controle de plantas daninhas, doenças e pragas é idêntico ao realizado no cultivo tradicional, tendo atenção às pragas e <button class="word_link">patógenos polífagos<span class="word_description">Patógenos que atacam um grande número de espécies vegetais.</span> </button>, que são um dos grandes problemas de sistemas integrados <a href="#ref_M3">[1]</a>. <br> 
 				&nbsp &nbsp Apresenta algumas exigências sendo os materiais de alta tecnologia exigentes quanto às condições químicas do solo, notadamente em relação à disponibilidade de nitrogênio e potássio, seguindo-se cálcio, magnésio e fósforo, apresenta exigência elevada quanto à radiação solar, podendo tornar-se inviável para regiões sob alta incidência de nuvens na fase fisiológica do enchimento de grãos, e é precedente desaconselhável para outras gramíneas agrícolas no sistema de rotação ou sucessão de culturas, notadamente para o arroz de terras altas <a href="#ref_M3">[1]</a>. <br>
 				&nbsp &nbsp Na Figura abaixo pode-se observar a cultura do <b>milho em sistema integrado de produção com o Pequi</b> (<i>Caryocar brasiliense</i>) sendo a espécie florestal do sistema no terceiro ano após a implantação.
 				<br> <br> </p>
@@ -231,7 +232,7 @@
 					Moench</i>)</h1>
 
 				<div class="box_info">
-					<p> &nbsp &nbsp Constitui uma opção viável, para atender a demanda dos produtores, devido as sua composição química ser semelhante ao milho, possibilitando uma fermentação adequada, consequentemente esse alimento tem a disponibilidade de conservação na forma de silagem, outro fator interessante é a sua elevada taxa de proteína bruta em algumas variedades e maior tolerância a seca <a href="#ref_M3">[3]</a>.</p>
+					<p> &nbsp &nbsp Constitui uma opção viável, para atender a demanda dos produtores, devido as sua composição química ser semelhante ao milho, possibilitando uma fermentação adequada, consequentemente esse alimento tem a disponibilidade de conservação na forma de silagem, outro fator interessante é a sua elevada taxa de proteína bruta em algumas variedades e maior tolerância à seca <a href="#ref_M3">[3]</a>.</p>
 
 					<img title="embrapa.com.br" class="box_img_right" src="../complements/images/module3/img_13.jpg">
 
@@ -263,7 +264,7 @@
 				 	<li> Produz pouca palhada residual e de degradação rápida; </li>
 				 	<li> Apresenta dificuldade para ser consorciada com forrageiras; essas duas características anteriores somadas à questão legal do vazio sanitário inviabiliza seu cultivo de safrinha dentro da maioria dos sistemas iLPF;
 					</li>
-					<li> Apresenta baixa tolerância ás condições químicas desfavoráveis do solo como elevada acidez e alumínio trocável (Al3+) e baixa saturação por bases (V%); </li>
+					<li> Apresenta baixa tolerância às condições químicas desfavoráveis do solo como elevada acidez e alumínio trocável (Al3+) e baixa saturação por bases (V%); </li>
 					<li> Apresenta pouca adaptação ao ambiente de abertura de novas áreas; respeitar um intervalo mínimo de 15 dias após a dessecação, exigindo um planejamento impecável do sistema, pois problemas de fitotoxicidade na soja por exsudados da cobertura morta em decomposição (ácidos fracos e glifosato) podem ocorrer<a href="#ref_M3">[1]</a>.</li> <br>
 				</ul>
 
@@ -280,7 +281,7 @@
 				</h1>
 
 				<div class="box_info">
-					<p> &nbsp &nbsp O milheto apresenta vantagens como: crescimento rápido e com rebrota, permitindo a entrada de animais a partir dos 35 dias após sua implantação quando as <button class="word_link">condições edafoclimáticas <span class="word_description">Características definidas através de factores do meio, tais como o clima, o relevo, a litologia, a temperatura, a humidade do ar, a radiação, o tipo de solo, o vento, a composição atmosférica e a precipitação pluvial</span> </button> são favoráveis; apresenta uma produtividade de grãos variando entre 500 a 1500 Kg ha-1 ainda, que, dificilmente será esta a finalidade principal dentro dos sistemas ILPF; é muito menos exigente em relações às condições edafoclimáticas quando comparado ao milho e ao sorgo sendo, por isso, recomendado para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas; apresenta materiais com fator de reprodução para nematoides extremamente baixos, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno; apresenta facilidade de ser consorciado com forrageiras podendo, inclusive, ser semeado com as mesmas em uma única operação; baixo custo de implantação quando utilizadas sementes produzidas na própria fazenda; apresenta grande facilidade na dessecação e boa ciclagem de nutrientes<a href="#ref_M3">[1]</a>. </p>
+					<p> &nbsp &nbsp O milheto apresenta vantagens como: crescimento rápido e com rebrota, permitindo a entrada de animais a partir dos 35 dias após sua implantação quando as <button class="word_link">condições edafoclimáticas <span class="word_description">Características definidas através de factores do meio, tais como o clima, o relevo, a litologia, a temperatura, a humidade do ar, a radiação, o tipo de solo, o vento, a composição atmosférica e a precipitação pluvial</span> </button> são favoráveis; apresenta uma produtividade de grãos variando entre 500 a 1500 Kg ha-1 ainda, que, dificilmente será esta a finalidade principal dentro dos sistemas ILPF; é muito menos exigente em relação às condições edafoclimáticas quando comparado ao milho e ao sorgo sendo, por isso, recomendado para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas; apresenta materiais com fator de reprodução para nematóides extremamente baixos, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno; apresenta facilidade de ser consorciado com forrageiras podendo, inclusive, ser semeado com as mesmas em uma única operação; baixo custo de implantação quando utilizadas sementes produzidas na própria fazenda; apresenta grande facilidade na dessecação e boa ciclagem de nutrientes<a href="#ref_M3">[1]</a>. </p>
 
 					<img title="embrapa.com.br" class="box_img_right" src="../complements/images/module3/img_17.jpg">
 
@@ -299,7 +300,7 @@
 				<ul>
 					<li>É uma leguminosa e, portanto, tem a capacidade de fixar nitrogênio do ar e aportar esse macronutriente para o sistema; utilizado como forrageira principalmente, é uma excelente fonte de proteínas de alta palatabilidade para os animais;</li>
 					<li>Apresenta um sistema radicular pivotante e muito agressivo, agindo na descompactação do solo e melhorando as condições físicas do mesmo;</li>
-					<li>É muito menos exigente em relações às condições edafoclimáticas quando comparado ao milho, sendo, por isso, recomendado para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas, notadamente para o arroz de terras altas;</li>
+					<li>É muito menos exigente em relação às condições edafoclimáticas quando comparado ao milho, sendo, por isso, recomendado para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas, notadamente para o arroz de terras altas;</li>
 					<li>Quando utilizado como leguminosa forrageira, apresenta facilidade de ser consorciado com outras forrageiras; apresenta grande facilidade na dessecação e boa ciclagem de nutrientes.</li>
 				</ul>
 
@@ -308,7 +309,7 @@
 				<ul>
 					<li>Quando utilizado solteiro para forragem, pode provocar timpanismo nos animais, além de deixar baixa produção de palhada. Esses fatos exigem seu consórcio com forrageiras gramíneas, tais como a B. ruziziensis ou <i>B. brizantha Cv Paiaguás</i>;</li>
 					<li>Quando utilizado para grãos, a tecnologia do consórcio com forrageiras gramíneas ainda não está consolidada sendo, por isso, desaconselhável; </li>
-					<li>Pode se tornar uma “ponte verde” para nematóides dentro dos sistemas integrados, notadamente o <i>Pratylenchus brachyurus</i>, sendo desaconselhável seu cultivo na safrinha em áreas com solos infestados por esse fitopatógeno; elevado custo das sementes, fato que encarece sua implantação. Esse fato pode ser contornando quando são utilizadas sementes produzidas na própria fazenda.</li>
+					<li>Pode se tornar uma “ponte verde” para nematóides dentro dos sistemas integrados, notadamente o <i>Pratylenchus brachyurus</i>, sendo desaconselhável seu cultivo na safrinha em áreas com solos infestados por esse fitopatógeno; elevado custo das sementes, fato que encarece sua implantação. Esse fato pode ser contornado quando são utilizadas sementes produzidas na própria fazenda.</li>
 				</ul> <br> <br>
 
 				<div class="isolated_img_div">
@@ -323,12 +324,12 @@
 				<p class="text_content" style="margin-top: 35px;">&nbsp &nbsp A Crotalária <i>ochroleuca</i> também é apontada como uma das alternativas promissoras de leguminosa forrageira para solos de textura média e argilosa cultivada na safrinha dentro da iLPF por apresentar as seguintes características relevantes para o sistema:</p>
 
 				<ul>
-					<li>É uma leguminosa e, portanto, tem a capacidade de fixar nitrogênio do ar e aportar esse macro nutriente para o sistema; pode ser utilizada como forrageira (uso principal) e também produzir grãos em mesmo cultivo, constituindo uma excelente fonte de proteínas de alta palatabilidade para os animais;</li>
+					<li>É uma leguminosa e, portanto, tem a capacidade de fixar nitrogênio do ar e aportar esse macronutriente para o sistema; pode ser utilizada como forrageira (uso principal) e também produzir grãos em mesmo cultivo, constituindo uma excelente fonte de proteínas de alta palatabilidade para os animais;</li>
 					<li>Apresenta um sistema radicular pivotante e agressivo, agindo na descompactação do solo e melhorando as condições físicas do mesmo;</li>
-					<li>É muito menos exigente em relações às condições edafoclimáticas quando comparada ao milho, sendo, por isso, recomendada para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas, notadamente para o arroz de terras altas; .</li>
+					<li>É muito menos exigente em relação às condições edafoclimáticas quando comparada ao milho, sendo, por isso, recomendada para fechamento da semeadura na safrinha; é um excelente precedente para a maioria das culturas, notadamente para o arroz de terras altas; .</li>
 					<li>Quando utilizada como leguminosa forrageira, apresenta facilidade de ser consorciada com outras forrageiras;</li>
 					<li>Apresenta grande facilidade na dessecação e boa ciclagem de nutrientes;</li>
-					<li>apresenta fator de reprodução para nematoides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno <a href="#ref_M3">[1]</a>
+					<li>apresenta fator de reprodução para nematóides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno <a href="#ref_M3">[1]</a>
 					</li>
 				</ul> <br> <br>
 
@@ -461,7 +462,7 @@
 							<p>
 								<i class="fas fa-check-circle"></i>
 								<b>PARABÉNS!!</b> <br>
-								<b>Resposta Correta.</b> A produção de milho destaca-se no contexto da integração lavoura pecuária, devido a inúmeras aplicações que os grãos possuem na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem. </p>
+								<b>Resposta Correta.</b> A produção de milho destaca-se no contexto da integração lavoura pecuária, devido às inúmeras aplicações que os grãos possuem na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem. </p>
 						</div>
 
 						<div class="hidden wrong_answer wrong_answerQ3">
@@ -476,7 +477,7 @@
 					<button class="see_answer" id="ans_Q3_M3">
 						Ver resposta</button>
 					<p class="hidden answer ans_Q3_M3" >Resposta: letra (c)<br>
-						A produção de milho destaca-se no contexto da integração lavoura pecuária, devido a inúmeras aplicações que os grãos possuem na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem.</p>
+						A produção de milho destaca-se no contexto da integração lavoura pecuária, devido às inúmeras aplicações que os grãos possuem na propriedade agrícola, sendo utilizado na alimentação animal na forma de grãos, de forragem verde ou conservada, na forma de rolão e silagem.</p>
 				</div>
 
 				<!-- Question 4 mod3-->
@@ -504,7 +505,7 @@
 								<i class="fas fa-check-circle"></i>
 								<b>PARABÉNS!</b> <br>
 								<b>Resposta Correta.</b> A <i>Crotalária ochroleuca</i> apresenta fator de
-									reprodução para nematoides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno. </p>
+									reprodução para nematóides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno. </p>
 
 						</div>
 						<div class="hidden wrong_answer wrong_answerQ4">
@@ -520,7 +521,7 @@
 						Ver resposta</button>
 					<p class="hidden answer ans_Q3_M3" >Resposta: letra (d)<br>
 						A <i>Crotalária ochroleuca</i> apresenta fator de
-						reprodução para nematoides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno. 
+						reprodução para nematóides extremamente baixo, notadamente para o <i>Pratylenchus brachyurus</i>, sendo uma excelente alternativa de safrinha para áreas com solos infestados por esse fitopatógeno. 
 					</p>
 				</div>
 
