--- a/subscription.html
+++ b/subscription.html
@@ -73,7 +73,7 @@
           <h1 class="info_title" >APRESENTAÇÃO</h1>
           <p class="info_description">
             Neste curso online de capacitação, com <b>carga horária de 24 hrs</b>, você irá conhecer mais sobre o
-            sistema de Integração Lavoura-Pecuária-Floresta, terá acesso a
+            sistema Agrossilvipastoril integrado ao desenvolvimento do Agro, terá acesso a
             apostilas, vídeos e exercícios, recebendo um certificado de
             participação ao final do curso.
             <br>
