--- a/content/module6.html
+++ b/content/module6.html
@@ -96,9 +96,6 @@
 	</div>
 
 		<div class="container_module_btns" id="container_module_btns">
-			<div class="line">
-				<span class="line_btn"></span>
-			</div>
 
 			<div class="buttons">
 				<button class="module_btn active_mod mod1_btn" data-module="container_mod1" onclick="openModule(this)" id="1" name="1">Módulo 1</button>
@@ -107,6 +104,11 @@
 				<button class="module_btn mod4_btn" data-module="container_mod4" onclick="openModule(this)" id="4" name="4">Módulo 4</button>
 				<button class="module_btn mod5_btn" data-module="container_mod5" onclick="openModule(this)" id="5" name="5">Módulo 5</button>
 				<button class="user module_btn mod6_btn" data-module="container_mod6" onclick="openModule(this)" id="6" name="6">Módulo 6</button>
+			
+				<div class="line">
+					<span class="line_btn"></span>
+				</div>
+			
 			</div>
 		</div>
 
@@ -127,7 +129,7 @@
 				<img class="info_img info_img_icon" id="icon_img" title="pt.vecteezy.com" src="../complements/images/module6/img_1.png">
 			</section>
 
-			<a target="_blank"  href="../books/module_6.pdf" class="download_button">Baixar apostila</a>
+			<a target="_blank"  href="../complements/books/module_6.pdf" class="download_button">Baixar apostila</a>
 		</section>
 
 		<!-- topic 01 -->
